product and details userpanel-teket added

--- a/Taksathi/templates/Taksathi/products_page/products_page.html
+++ b/Taksathi/templates/Taksathi/products_page/products_page.html
@@ -97,4 +97,14 @@
             </div>
         </section>
     </main>
+
+    <script>
+        $.ajax({
+            url:'',
+            success:(res)=>{
+                console.log(res);
+            }
+        })
+    </script>
+
 {% endblock %}
