--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="{% static 'base/assets/fonts/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'base/assets/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'base/assets/css/product-detail.css' %}">
+
 </head>
 
 <body>
@@ -301,7 +303,7 @@
             <p class="text-center text-secondary  fs-6">COPYRIGHT © 2020 QNET LTD. ALL RIGHTS RESERVED</p>
         </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="{% static 'base/assets/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'base/assets/bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'base/assets/plugins/flickity/flickity.min.js' %}"></script>
