--- a/assets/taksathi_panel/asset/style/shoping-bag.css
+++ b/assets/taksathi_panel/asset/style/shoping-bag.css
@@ -98,7 +98,7 @@
 
 .short-factor {
     width: 100%;
-    height: 365px;
+    height: 245px;
     display: block;
     background-color: white;
     box-shadow: 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
@@ -285,6 +285,8 @@
     font-size: 25px;
     margin: auto;
     margin-top: 5%;
+    margin-bottom: 50px;
+
 }
 
 @media (min-width: 300px) and (max-width: 450px) {
